# octave-12-key-macropad

./: NOTE.md  README.md
circuitpython-bin/: adafruit-circuitpython-takayoshiotake_octave_rp2040-en_US-8.0.3.uf2  circuitpython-takayoshiotake_octave_rp2040-7.3.0.uf2
electoronics/: Octave_Library.kicad_sym
electoronics/Octave_Input_PCB/: Octave_Input_PCB.kicad_pcb  Octave_Input_PCB.kicad_pro  Octave_Input_PCB.kicad_sch
electoronics/Octave_Library.3dshapes/: Hot_Swap_Socket_CPG151101S11.FCStd  Hot_Swap_Socket_CPG151101S11.scad  Hot_Swap_Socket_CPG151101S11.step
electoronics/Octave_Library.pretty/: C_0805_2012Metric_Pad1.18x1.45mm_HandSolder.kicad_mod  D_SOD-323.kicad_mod  Hot_Swap_Socket_CPG151101S11.kicad_mod  Incremental_Encoder_PEC12R-4xxxF-Sxxxx.kicad_mod
electoronics/Untitled/: Untitled.kicad_pro
electronics/: Octave_Library.kicad_sym
electronics/Octave_Input_LED_PCB/: Octave_Input_LED_PCB.kicad_pcb  Octave_Input_LED_PCB.kicad_pro  Octave_Input_LED_PCB.kicad_sch
electronics/Octave_Input_LED_PCB_plot/: .gitignore  makezip.sh
electronics/Octave_Input_PCB/: Octave_Input_PCB.kicad_pcb  Octave_Input_PCB.kicad_pro  (+2 more)
layout/: keyboard-layout.rawdata.json
mechanics/: Octave_Enclosure-Base.step  Octave_Enclosure-Case.stl  Octave_Enclosure-Cover.step  Octave_Enclosure-Cover.stl  Octave_Enclosure-Top Frame.stl  Octave_Enclosure.FCStd
prototype/: README.md
prototype-1/: README.md
prototype-2/: README.md
software/: README.md  boot.py  code.py  pyproject.toml  requirements.txt
software/octave_pcb/: key_event.py  key_matrix.py  rotary_encoder.py
(+43 files in other folders)
