[tool.poetry]
name = "octave"
version = "0.1.0"
description = ""
authors = ["takayoshiotake <takayoshiotake@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
circup = "^1.0.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
